--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^4.12.3",
     "nodemon": "^1.12.1",
     "xmlhttprequest": "^1.8.0"
+  },
+  "engines": {
+    "node": ">= 7.6.0"
   }
 }
