--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "node bin/www",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/www"
+    "dev": "nodemon bin/www"
   },
   "author": "Ivan",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.135.0",
+    "aws-sdk": "^2.138.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
