--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "mongoose": "^4.12.3",
     "nodemon": "^1.12.1",
