--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "author": "Ivan",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.138.0",
+    "aws-sdk": "^2.149.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
-    "mongoose": "^4.12.3",
+    "mongoose": "^4.13.2",
     "nodemon": "^1.12.1",
     "xmlhttprequest": "^1.8.0"
   },
   "engines": {
-    "node": ">= 7.6.0"
+    "node": "v8.6.0"
   }
 }
